// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With session 1`] = `
<div>
  <div
    class="main-body"
  >
    <header
      class="Header"
    >
      <nav
        class="navbar navbar-expand-md navbar-light"
      >
        <div
          class="container"
        >
          <a
            class="navbar-brand"
            href="/"
            title="electronic Babylonian Library (eBL)"
          >
            <h1
              class="Header__title"
            >
              <span
                class="Header__title-main"
              >
                electronic
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  B
                </span>
                abylonian
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  L
                </span>
                ibrary
              </span>
              <small
                class="Header__title-abbreviation"
              >
                e
                <small
                  class="Header__title-abbreviation__caps"
                >
                  bl
                </small>
              </small>
            </h1>
          </a>
          <span
            class="navbar-brand"
          >
            <div
              class="Header__logo-container container"
            >
              <a
                href="https://www.lmu.de"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__lmu-logo img-fluid"
                  src="LMU_Logo.svg"
                />
              </a>
              <a
                href="https://badw.de/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__badw-logo img-fluid"
                  src="BAdW_Logo.svg"
                />
              </a>
            </div>
          </span>
          <button
            aria-controls="Header-2"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="Header-2"
          >
            <div
              class="d-flex justify-content-between"
              id="navbar-container"
            >
              <div
                id="menu-lines"
              >
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/signs"
                      href="/signs"
                    >
                      Signs
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/dictionary"
                      href="/dictionary"
                    >
                      Dictionary
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="active nav-link active"
                      data-rr-ui-event-key="/corpus"
                      href="/corpus"
                    >
                      Corpus
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/library"
                      href="/library"
                    >
                      Library
                    </a>
                  </div>
                </div>
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/about"
                      href="/about"
                    >
                      About
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/bibliography"
                      href="/bibliography"
                    >
                      Bibliography
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/tools"
                      href="/tools"
                    >
                      Tools
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/projects"
                      href="/projects"
                    >
                      Projects
                    </a>
                  </div>
                </div>
              </div>
              <span
                class="navbar-text"
                id="user"
              >
                <button
                  class="btn btn-outline-secondary btn-sm"
                  type="button"
                >
                  Logout 
                  Test
                </button>
              </span>
            </div>
          </div>
        </div>
      </nav>
    </header>
    <main
      class="main"
    >
      <div
        class="main__content"
      >
        <header
          class="main__header"
        >
          <nav
            aria-label="breadcrumb"
            class="main__breadcrumbs"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item"
              >
                <a
                  href="/"
                >
                  eBL
                </a>
              </li>
              <li
                aria-current="page"
                class="breadcrumb-item active"
              >
                Corpus
              </li>
            </ol>
          </nav>
          <h2
            class="main__heading"
          >
            Corpus
          </h2>
          <div
            class="main__toolbar btn-toolbar"
            role="toolbar"
          />
        </header>
        <div
          class="container-fluid"
        >
          <div
            class="row"
          >
            <div
              class="col-md-6"
            >
              <ul
                class="nav nav-tabs"
                id="CorpusTab-3"
                role="tablist"
              >
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <button
                    aria-controls="CorpusTab-3-tabpane-L"
                    aria-selected="true"
                    class="nav-link active"
                    data-rr-ui-event-key="L"
                    id="CorpusTab-3-tab-L"
                    role="tab"
                    type="button"
                  >
                    Literature
                  </button>
                </li>
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <button
                    aria-controls="CorpusTab-3-tabpane-D"
                    aria-selected="false"
                    class="nav-link"
                    data-rr-ui-event-key="D"
                    id="CorpusTab-3-tab-D"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    Divination
                  </button>
                </li>
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <button
                    aria-controls="CorpusTab-3-tabpane-Med"
                    aria-selected="false"
                    class="nav-link"
                    data-rr-ui-event-key="Med"
                    id="CorpusTab-3-tab-Med"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    Medicine
                  </button>
                </li>
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <button
                    aria-controls="CorpusTab-3-tabpane-Mag"
                    aria-selected="false"
                    class="nav-link"
                    data-rr-ui-event-key="Mag"
                    id="CorpusTab-3-tab-Mag"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    Magic
                  </button>
                </li>
              </ul>
              <div
                class="tab-content"
              >
                <div
                  aria-labelledby="CorpusTab-3-tab-L"
                  class="fade tab-pane active show"
                  id="CorpusTab-3-tabpane-L"
                  role="tabpanel"
                >
                  <section>
                    <h3 />
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      I. Narrative Poetry
                    </h3>
                    <ol
                      class="container-fluid"
                    >
                      <li
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <a
                            href="/corpus/L/1/1"
                          >
                            1
                            . 
                            First Category 1
                          </a>
                           
                          — 
                          99
                           vv.
                        </div>
                      </li>
                      <li
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <a
                            href="/corpus/L/1/2"
                          >
                            2
                            . 
                            First Category 2
                          </a>
                           
                          — 
                          99
                           vv.
                        </div>
                      </li>
                    </ol>
                  </section>
                  <section>
                    <h3>
                      II. Monologue and dialogue literature
                    </h3>
                    <ol
                      class="container-fluid"
                    >
                      <li
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <a
                            href="/corpus/L/2/1"
                          >
                            1
                            . 
                            Second Category
                          </a>
                           
                          — 
                          2
                           vv.
                        </div>
                      </li>
                    </ol>
                  </section>
                  <section>
                    <h3>
                      III. Literary Hymns and Prayers
                    </h3>
                    <ol
                      class="container-fluid"
                    >
                      <li
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <a
                            href="/corpus/L/3/1"
                          >
                            1
                            . 
                            Third Category
                          </a>
                           
                          — 
                          ±
                          45
                           vv.
                        </div>
                      </li>
                    </ol>
                  </section>
                </div>
                <div
                  aria-labelledby="CorpusTab-3-tab-D"
                  class="fade tab-pane"
                  id="CorpusTab-3-tabpane-D"
                  role="tabpanel"
                >
                  <section>
                    <h3 />
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      I. Celestial Divination (
                      <em>
                        Enūma Anu Enlil
                      </em>
                      )
                    </h3>
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      II. Terrestrial Divination (
                      <em>
                        Šumma ālu
                      </em>
                      )
                    </h3>
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      III. Extispicy (
                      <em>
                        Bārûtu
                      </em>
                      )
                    </h3>
                    <ol
                      class="container-fluid"
                    >
                      <li
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <a
                            href="/corpus/D/3/1"
                          >
                            1
                            . 
                            Divination Third Category
                          </a>
                           
                          — 
                          ±
                          674
                           vv.
                        </div>
                      </li>
                    </ol>
                  </section>
                </div>
                <div
                  aria-labelledby="CorpusTab-3-tab-Med"
                  class="fade tab-pane"
                  id="CorpusTab-3-tabpane-Med"
                  role="tabpanel"
                >
                  <section>
                    <h3 />
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      I. Nineveh Medical Encyclopaedia
                    </h3>
                    <ol
                      class="container-fluid"
                    >
                      <li
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <a
                            href="/corpus/Med/1/1"
                          >
                            1
                            . 
                            Medicine First Category
                          </a>
                           
                          — 
                          3
                           vv.
                        </div>
                      </li>
                    </ol>
                  </section>
                </div>
                <div
                  aria-labelledby="CorpusTab-3-tab-Mag"
                  class="fade tab-pane"
                  id="CorpusTab-3-tabpane-Mag"
                  role="tabpanel"
                >
                  <section>
                    <h3 />
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      I. Anti-witchcraft
                    </h3>
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      II. “Hand-lifting” Prayers (
                      <em>
                        šuʾilas
                      </em>
                      )
                    </h3>
                    <ol
                      class="container-fluid"
                    />
                  </section>
                </div>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <img
                alt="LibraryCropped.svg"
                class="img-fluid"
                src="http://example.com/images/LibraryCropped.svg"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="main-footer"
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/impressum"
          >
            Impressum
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/datenschutz"
          >
            Datenschutz
          </a>
        </li>
      </ol>
    </footer>
  </div>
</div>
`;

exports[`Without session 1`] = `
<div>
  <div
    class="main-body"
  >
    <header
      class="Header"
    >
      <nav
        class="navbar navbar-expand-md navbar-light"
      >
        <div
          class="container"
        >
          <a
            class="navbar-brand"
            href="/"
            title="electronic Babylonian Library (eBL)"
          >
            <h1
              class="Header__title"
            >
              <span
                class="Header__title-main"
              >
                electronic
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  B
                </span>
                abylonian
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  L
                </span>
                ibrary
              </span>
              <small
                class="Header__title-abbreviation"
              >
                e
                <small
                  class="Header__title-abbreviation__caps"
                >
                  bl
                </small>
              </small>
            </h1>
          </a>
          <span
            class="navbar-brand"
          >
            <div
              class="Header__logo-container container"
            >
              <a
                href="https://www.lmu.de"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__lmu-logo img-fluid"
                  src="LMU_Logo.svg"
                />
              </a>
              <a
                href="https://badw.de/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__badw-logo img-fluid"
                  src="BAdW_Logo.svg"
                />
              </a>
            </div>
          </span>
          <button
            aria-controls="Header-7"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="Header-7"
          >
            <div
              class="d-flex justify-content-between"
              id="navbar-container"
            >
              <div
                id="menu-lines"
              >
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/signs"
                      href="/signs"
                    >
                      Signs
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/dictionary"
                      href="/dictionary"
                    >
                      Dictionary
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="active nav-link active"
                      data-rr-ui-event-key="/corpus"
                      href="/corpus"
                    >
                      Corpus
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/library"
                      href="/library"
                    >
                      Library
                    </a>
                  </div>
                </div>
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/about"
                      href="/about"
                    >
                      About
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/bibliography"
                      href="/bibliography"
                    >
                      Bibliography
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/tools"
                      href="/tools"
                    >
                      Tools
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rr-ui-event-key="/projects"
                      href="/projects"
                    >
                      Projects
                    </a>
                  </div>
                </div>
              </div>
              <span
                class="navbar-text"
                id="user"
              >
                <button
                  class="btn btn-outline-secondary btn-sm"
                  type="button"
                >
                  Login
                </button>
              </span>
            </div>
          </div>
        </div>
      </nav>
    </header>
    <main
      class="main"
    >
      <div
        class="main__content"
      >
        <header
          class="main__header"
        >
          <nav
            aria-label="breadcrumb"
            class="main__breadcrumbs"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item"
              >
                <a
                  href="/"
                >
                  eBL
                </a>
              </li>
              <li
                aria-current="page"
                class="breadcrumb-item active"
              >
                Corpus
              </li>
            </ol>
          </nav>
          <h2
            class="main__heading"
          >
            Corpus
          </h2>
          <div
            class="main__toolbar btn-toolbar"
            role="toolbar"
          />
        </header>
        <div
          class="container-fluid"
        >
          <div
            class="row"
          >
            <div
              class="col-md-6"
            >
              <ul
                class="nav nav-tabs"
                id="CorpusTab-8"
                role="tablist"
              >
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <button
                    aria-controls="CorpusTab-8-tabpane-L"
                    aria-selected="true"
                    class="nav-link active"
                    data-rr-ui-event-key="L"
                    id="CorpusTab-8-tab-L"
                    role="tab"
                    type="button"
                  >
                    Literature
                  </button>
                </li>
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <button
                    aria-controls="CorpusTab-8-tabpane-D"
                    aria-selected="false"
                    class="nav-link"
                    data-rr-ui-event-key="D"
                    id="CorpusTab-8-tab-D"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    Divination
                  </button>
                </li>
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <button
                    aria-controls="CorpusTab-8-tabpane-Med"
                    aria-selected="false"
                    class="nav-link"
                    data-rr-ui-event-key="Med"
                    id="CorpusTab-8-tab-Med"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    Medicine
                  </button>
                </li>
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <button
                    aria-controls="CorpusTab-8-tabpane-Mag"
                    aria-selected="false"
                    class="nav-link"
                    data-rr-ui-event-key="Mag"
                    id="CorpusTab-8-tab-Mag"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    Magic
                  </button>
                </li>
              </ul>
              <div
                class="tab-content"
              >
                <div
                  aria-labelledby="CorpusTab-8-tab-L"
                  class="fade tab-pane active show"
                  id="CorpusTab-8-tabpane-L"
                  role="tabpanel"
                >
                  <section>
                    <h3 />
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      I. Narrative Poetry
                    </h3>
                    <ol
                      class="container-fluid"
                    >
                      <li
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <a
                            href="/corpus/L/1/1"
                          >
                            1
                            . 
                            First Category 1
                          </a>
                           
                          — 
                          99
                           vv.
                        </div>
                      </li>
                      <li
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <a
                            href="/corpus/L/1/2"
                          >
                            2
                            . 
                            First Category 2
                          </a>
                           
                          — 
                          99
                           vv.
                        </div>
                      </li>
                    </ol>
                  </section>
                  <section>
                    <h3>
                      II. Monologue and dialogue literature
                    </h3>
                    <ol
                      class="container-fluid"
                    >
                      <li
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <a
                            href="/corpus/L/2/1"
                          >
                            1
                            . 
                            Second Category
                          </a>
                           
                          — 
                          2
                           vv.
                        </div>
                      </li>
                    </ol>
                  </section>
                  <section>
                    <h3>
                      III. Literary Hymns and Prayers
                    </h3>
                    <ol
                      class="container-fluid"
                    >
                      <li
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <a
                            href="/corpus/L/3/1"
                          >
                            1
                            . 
                            Third Category
                          </a>
                           
                          — 
                          ±
                          45
                           vv.
                        </div>
                      </li>
                    </ol>
                  </section>
                </div>
                <div
                  aria-labelledby="CorpusTab-8-tab-D"
                  class="fade tab-pane"
                  id="CorpusTab-8-tabpane-D"
                  role="tabpanel"
                >
                  <section>
                    <h3 />
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      I. Celestial Divination (
                      <em>
                        Enūma Anu Enlil
                      </em>
                      )
                    </h3>
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      II. Terrestrial Divination (
                      <em>
                        Šumma ālu
                      </em>
                      )
                    </h3>
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      III. Extispicy (
                      <em>
                        Bārûtu
                      </em>
                      )
                    </h3>
                    <ol
                      class="container-fluid"
                    >
                      <li
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <a
                            href="/corpus/D/3/1"
                          >
                            1
                            . 
                            Divination Third Category
                          </a>
                           
                          — 
                          ±
                          674
                           vv.
                        </div>
                      </li>
                    </ol>
                  </section>
                </div>
                <div
                  aria-labelledby="CorpusTab-8-tab-Med"
                  class="fade tab-pane"
                  id="CorpusTab-8-tabpane-Med"
                  role="tabpanel"
                >
                  <section>
                    <h3 />
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      I. Nineveh Medical Encyclopaedia
                    </h3>
                    <ol
                      class="container-fluid"
                    >
                      <li
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <a
                            href="/corpus/Med/1/1"
                          >
                            1
                            . 
                            Medicine First Category
                          </a>
                           
                          — 
                          3
                           vv.
                        </div>
                      </li>
                    </ol>
                  </section>
                </div>
                <div
                  aria-labelledby="CorpusTab-8-tab-Mag"
                  class="fade tab-pane"
                  id="CorpusTab-8-tabpane-Mag"
                  role="tabpanel"
                >
                  <section>
                    <h3 />
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      I. Anti-witchcraft
                    </h3>
                    <ol
                      class="container-fluid"
                    />
                  </section>
                  <section>
                    <h3>
                      II. “Hand-lifting” Prayers (
                      <em>
                        šuʾilas
                      </em>
                      )
                    </h3>
                    <ol
                      class="container-fluid"
                    />
                  </section>
                </div>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <img
                alt="LibraryCropped.svg"
                class="img-fluid"
                src="http://example.com/images/LibraryCropped.svg"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="main-footer"
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/impressum"
          >
            Impressum
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/datenschutz"
          >
            Datenschutz
          </a>
        </li>
      </ol>
    </footer>
  </div>
</div>
`;
